[gd_scene load_steps=48 format=2]

[ext_resource path="res://scenes/entity/DemonEat.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/entity/PlayerDemon.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/pitmaster_player_animation.png" type="Texture" id=3]
[ext_resource path="res://scenes/entity/DemonForeman.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 1568, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 1680, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 1904, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 2016, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 2128, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 784, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 1008, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 1120, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 1232, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 1344, 0, 112, 160 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 1456, 0, 112, 160 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "eat_loop",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "end_eat",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "start_eat",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 320, 112, 160 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 112, 320, 112, 160 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 224, 320, 112, 160 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 336, 320, 112, 160 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 448, 320, 112, 160 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 560, 320, 112, 160 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 1344, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 1456, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 112, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 224, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 336, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 448, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 560, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 896, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 1008, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 1120, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 1232, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 672, 160, 112, 160 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 784, 160, 112, 160 )

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "end_fire",
"speed": 10.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "idle_fire",
"speed": 10.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "start_fire",
"speed": 10.0
} ]

[node name="PlayerDemon" type="Node2D"]
script = ExtResource( 2 )

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
animation = "idle"

[node name="Tail" type="AnimatedSprite" parent="."]
frames = SubResource( 28 )
animation = "idle"

[node name="Hand" type="AnimatedSprite" parent="."]
frames = SubResource( 43 )
animation = "idle"

[node name="DemonForeman" parent="." instance=ExtResource( 4 )]
position = Vector2( 32, -36 )

[node name="DemonEat" parent="." instance=ExtResource( 1 )]
position = Vector2( -11, -8 )

[connection signal="animation_finished" from="Body" to="." method="_on_Body_animation_finished"]
[connection signal="animation_finished" from="Hand" to="." method="_on_Hand_animation_finished"]
[connection signal="close_mouth" from="DemonEat" to="." method="_on_DemonEat_close_mouth"]
[connection signal="open_mouth" from="DemonEat" to="." method="_on_DemonEat_open_mouth"]
